perf: 试点 SSE 虚拟线程执行器